--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
              </span>
         </div>
 
+        <div class="form-group" ng-class="{'has-error': form.password.$invalid, 'has-success': form.password.$valid}">
+            <label class="control-label">Password:</label>
+            <input name="password" required password="{{pswLength}}" ng-model="f.password" class="form-control">
+             <span ng-if="form.password.$error[type]" ng-repeat="type in helpTypes" class="help-block">
+                 {{help[type]}}
+             </span>
+        </div>
+
 
         <button ng-disabled="form.$invalid" class="btn btn-primary" ng-click="showF(f)">Submit</button>
     </form>
